# satellite-aukf-assignment

./: .clean_meta.json  .gitattributes  .gitignore  .pre-commit-config.yaml  01_aukf_implementation.ipynb  01_data_exploration.ipynb  02_filter_demo.ipynb  03_ukf_demo.ipynb  04_model_comparison.ipynb  AI_DISCLOSURE.md  CITATION.cff  LICENSE  README.md  Untitled.ipynb  analyze_gps_data.py  aukf.py  ci.yml  config.toml  data_utils.py  download_orekit_data.py  environment.yml  meas_cols.json  meas_cols_with_units.json  motion_model.ipynb  nis_series.csv  notes.ipynb  pyproject.toml  regen_clean.py  requirements.txt  setup.py  setup_orekit.py  sitecustomize.py  test_aukf.py  utils.py
.github/workflows/: ci.yml
aukf/: __init__.py  aukf.py
data/: GPS_clean.parquet  GPS_clean_fixed_units.parquet
notebooks/: 01_data_exploration.ipynb  02_AUKF_Satellite_Tracking.ipynb  02_filter_demo.ipynb  aukf_satellite_tracking.ipynb  meas_cols.json  motion_model.ipynb
satellite_aukf_assignment.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
scripts/: diagnose_velocity.py  fix_data_units.py  regen_clean.py
src/: aukf.py  utils.py
src/aukf/: __init__.py  aukf.py
src/satellite_aukf/: __init__.py  aukf.py  config.py  preprocessing.py  utils.py  visualization.py
tests/: __init__.py  test_aukf.py  test_clean_parquet.py  test_predict_update.py  test_runtime.py  test_sigma_points.py  test_ukf.py
