# ------------------------------------------------------------
# Build & Packaging (PEP 621 via setuptools)
# ------------------------------------------------------------
[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name            = "satellite-aukf"
version         = "1.0.0"
description     = "Adaptive UKF for satellite tracking using GNSS measurements"
readme          = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.8"
authors         = [{name = "Naziha Aslam", email = "naziha2305@gmail.com"}]
license         = {text = "MIT"}

dependencies = [
  # core science stack
  "numpy>=1.21",
  "scipy>=1.7",
  "pandas>=1.3",
  "matplotlib>=3.4",
  "seaborn>=0.11",
]

[project.optional-dependencies]
dev = [
  # testing & coverage
  "pytest>=7.0",
  "pytest-cov>=4.0",
  # lint / style
  "black==25.1.0",
  "isort==6.0.1",
  "flake8==7.3.0",
  "flake8-bugbear>=24.0",
  # git hooks runner
  "pre-commit>=4.2",
]

# ------------------------------------------------------------
# Tooling configuration kept alongside the code (style = DRY)
# ------------------------------------------------------------
[tool.black]
line-length    = 88
target-version = ["py39"]

[tool.isort]
profile      = "black"
line_length  = 88

[tool.flake8]
max-line-length = 88
extend-ignore   = ["E203", "W503", "E501", "E402", "F401", "F841"]
